--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint": "eslint --ext .ts,.tsx --fix"
   },
   "keywords": [],
   "author": "Umma Ahimsha <uahimsha@gmail.com>",
@@ -17,6 +18,12 @@
   "devDependencies": {
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
 }
