--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Umma Ahimsha <uahimsha@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
